--- a/gestion_factures/templates/imprim_facture.html
+++ b/gestion_factures/templates/imprim_facture.html
@@ -13,15 +13,7 @@
     <title>La liste des factures</title>
 
     <!-- Custom fonts for this template -->
-    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/print.css' %}" rel="stylesheet">
-
-    <!-- Custom styles for this page -->
-    <link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
@@ -29,9 +21,8 @@
 
 <body id="page-top">
 
-
-    <div class="card-header py-3">
-        <span class="m-0 font-weight-bold text-primary">la Facture N°{{ proforma.numero_proforma }} a été céée avec succès!</span><button onclick="imprimerSections1()" class="btn">imprimer</button>
+    <div class="card-header">
+        <span class="text">la Facture N°{{ proforma.numero_proforma }} a été créée avec succès!</span><button onclick="imprimerSections1()" class="btn">🖨️ imprimer</button><button onclick="imprimerSections()" class="btn">télécharger</button> <a href="{% url 'liste_facture' user.username %}" class="btn">retour</a>
     </div>
                             
     <section class="proforma" id="proforma1">
@@ -57,8 +48,8 @@
                     <tr>
                         <th>DESCRIPTION</th>
                         <th>QUANTITE</th>
-                        <th>PRIX UNITAIRE (FCFA)</th>
-                        <th>MONTANT (FCFA)</th>
+                        <th>PRIX UNITAIRE (fcfa)</th>
+                        <th>MONTANT (fcfa)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -125,8 +116,8 @@
                     <tr>
                         <th>DESCRIPTION</th>
                         <th>QUANTITE</th>
-                        <th>PRIX UNITAIRE (FCFA)</th>
-                        <th>MONTANT (FCFA)</th>
+                        <th>PRIX UNITAIRE (fcfa)</th>
+                        <th>MONTANT (fcfa)</th>
                     </tr>
                 </thead>
                 <tbody class="tablebody">
@@ -239,23 +230,7 @@
     </a>
 
     <!-- Bootstrap core JavaScript-->
-
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
     <script src="{% static 'js/js_facture/imprim_facture.js' %}"></script>
-
-    <!-- Page level plugins -->
-    <script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
-    <script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="{% static 'js/demo/datatables-demo.js' %}"></script>
 
 </body>
 
