--- a/gestion_factures/templates/liste_client.html
+++ b/gestion_factures/templates/liste_client.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>La liste des factures</title>
+    <title>La liste des clients</title>
 
     <!-- Custom fonts for this template -->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
@@ -47,65 +47,56 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h3 class="h3 mb-1 text-gray-600">Liste des factures</h3>
+                    <h1 class="h3 mb-2 text-gray-800">Liste des clients</h1>
                     
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Factures</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Clients</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>Proforma</th>
-                                            <th>Client</th>
-                                            <th>TTC(fcfa)</th>
-                                            <th>Payée</th>
-                                            <th>Date</th>
+                                            <th>Nom du Client</th>
+                                            <th>Adresse</th>
+                                            <th>Contact</th>
+                                            <th>Ajouter par</th>
+                                            <th>Date d'enrégistrement</th>
                                             <th>Actions</th>
                                         </tr>
                                     </thead>
                                     <tfoot>
                                         <tr>
-                                            <th>Proforma</th>
-                                            <th>Client</th>
-                                            <th>TTC (fcfa)</th>
-                                            <th>Payée</th>
-                                            <th>Date</th>
+                                            <th>Nom du Client</th>
+                                            <th>Adresse</th>
+                                            <th>Contact</th>
+                                            <th>Ajouter par</th>
+                                            <th>Date d'enrégistrement</th>
                                             <th>Actions</th>
                                         </tr>
                                     </tfoot>
                                     <tbody>
-                                        {% for p in factures %}
+                                        {% for client in clients %}
                                             <tr>
-                                                <td>N°{{p.numero_proforma}}</td>
-                                                <td>{{p.client}}</td>
-                                                <td>{{p.montant_ttc}}</td>
+                                                <td>{{ client.nom }}</td>
+                                                <td>{{ client.adresse }}</td>
+                                                <td>{{ client.contact }}</td>
+                                                <td>{{ client.save_by.username }}</td> 
+                                                <td>{{ client.date_client }}</td>
                                                 <td>
-                                                    {% if p.status == True %}
-                                                        <span class="btn btn-info btn-circle btn-sm">
-                                                            <i class="fas fa-check-circle"></i> 
-                                                        </span> oui
-                                                    {% else %}
-                                                        <span class="btn btn-success btn-circle btn-sm">
-                                                            <i class="fas fa-times-circle"></i> 
-                                                        </span> non
-                                                    {% endif %} 
-                                                </td>
-                                                <td>{{p.date_proforma}}</td>
-                                                <td>
-                                                    <a href="{% url 'details_facture' user.username p.id %}" class="btn btn-info btn-circle btn-sm">
-                                                        <i class="fas fa-info-circle"></i>
-                                                    </a>
-                                                    <a href="{% url 'modifier_facture' user.username p.id %}"" class="btn btn-success btn-circle btn-sm">
+                                                    <a href="{% url 'modifier_client' user.username client.id %}" class="btn btn-success btn-circle btn-sm">
                                                         <i class="fas fa-edit"></i>
                                                     </a>
+                                                    {% if user.is_staff == True %}
+                                                        <a href="" class="btn btn-danger btn-circle btn-sm">
+                                                            <i class="fas fa-trash"></i>
+                                                        </a>
+                                                    {% endif %}
                                                 </td>
                                             </tr>
                                         {% endfor %}
-                                        
                                     </tbody>
                                 </table>
                             </div>
@@ -132,26 +123,6 @@
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
     </a>
-
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Bootstrap core JavaScript-->
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
