--- a/gestion_factures/templates/sidebar.html
+++ b/gestion_factures/templates/sidebar.html
@@ -74,7 +74,7 @@
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="buttons.html">lite des clients</a>
+                <a class="collapse-item" href="{% url 'liste_client' user.username %}">lite des clients</a>
                 <a class="collapse-item" href="{% url 'liste_facture' user.username %}">liste des factures</a>
             </div>
         </div>
