--- a/gestion_factures/templates/details_facture.html
+++ b/gestion_factures/templates/details_facture.html
@@ -25,7 +25,7 @@
 <body id="page-top">
 
 
-    <div class="card-header" style="padding-left: 150px;padding-right: 150px;">
+    <div class="card-header">
         <span class="text">Détails de la facture N°{{ proforma.numero_proforma }} : </span><button onclick="imprimerSections()" class="btn">🖨️ imprimer</button><button onclick="imprimerSections()" class="btn">télécharger</button> <a href="{% url 'liste_facture' user.username %}" class="btn">retour</a>
     </div>
                             
